src/components/LandingPageComponents/styles/PreviousClientsStyle.css
#prevClients{
    max-width: 100%;
}

#Heading{
    /* border: 3px solid green; */
    margin: auto;
    padding-top:10%;
    /* padding: 20px; */
    position: relative;
    width: 50vw;
    height: 10vh;
    

    font-family: 'Actor';
    font-style: normal;
    font-weight: 400;
    font-size: 50px;
    line-height: 32px;
    /* or 64% */
    text-align: center;
    letter-spacing: 0.2px;

    color: #93B769;
}

